Replace deprecated URL usage with URI in multiple classes